--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         php: [7.4, 8.0]
-        laravel: [8.*]
+        laravel: [7.*, 8.*]
         os: [ubuntu-latest]
         coverage: [none]
         include:
